# stellar-trust-escrow

./: package-lock.json
backend/: .env.example  package.json  server.js
backend/api/controllers/: escrowController.js
backend/api/middleware/: audit.js
backend/api/routes/: auditRoutes.js  metricsRoutes.js  relayerRoutes.js
backend/database/: schema.prisma
backend/lib/: cache.js  connectionMonitor.js  metrics.js  prisma.js  prismaMetrics.js  retryUtils.js
backend/middleware/: metricsMiddleware.js
backend/monitoring/: docker-compose.yml  prometheus.yml
backend/monitoring/grafana/provisioning/dashboards/: dashboard.yml  ste-overview.json
backend/services/: auditService.js  relayerService.js
backend/tests/: escrowController.test.js
backend/tests/fixtures/: escrow.json
contracts/escrow_contract/: Cargo.toml
contracts/escrow_contract/src/: events.rs  lib.rs  types.rs
docs/: audit-report.md
